--- a/index.html
+++ b/index.html
@@ -31,9 +31,18 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Welcome to GitHub Pages.</h3>
+        <h3>Project Goals</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>SheepShear is a fork of the excellent SheepShaver emulator to ensure its continued existence and development.</p>
+
+<h3>Target platforms</h3>
+
+<ul>
+<li>Linux</li>
+<li>Haiku</li>
+<li>MacOS X</li>
+<li>Windows</li>
+</ul>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
