--- a/index.html
+++ b/index.html
@@ -38,34 +38,47 @@
 <h3>Target platforms</h3>
 
 <ul>
-<li>Linux</li>
 <li>Haiku</li>
+<li>Linux</li>
 <li>MacOS X</li>
 <li>Windows</li>
 </ul>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<h3>Compiling</h3>
+
+<p>Binary packages aren't available at this time given the early state of SheepShear and its rapid pace of development.</p>
+
+<h4>Haiku</h4>
+<pre><code>$ git clone https://github.com/kallisti5/sheepshear.git
+$ cd sheepshear/src/Haiku
+$ make
 </code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<h4>Linux</h4>
+<pre><code>$ git clone https://github.com/kallisti5/sheepshear.git
+$ cd sheepshear/src/Unix
+$ ./autogen.sh
+$ make
+</code></pre>
 
-<h3>Designer Templates</h3>
+<h4>MacOS X</h4>
+<p>Use Xcode, in a rough state currently as OS X now uses clang by default (which doesn't play nicely with the current PowerPC emulation code)</p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<h4>Windows</h4>
+<p>TODO</p>
 
 <h3>Authors and Contributors</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>The SheepShear community would like to personally thank the tireless developers who worked on SheepShaver over the years.</p>
 
 <h3>Support or Contact</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<h4>IRC</h4>
+<ul>
+<li><b>Server:</b>irc.freenode.net</li>
+<li><b>Channel:</b>#sheepshear</li>
+</ul>
+
       </section>
     </div>
 
@@ -73,7 +86,6 @@ $ git checkout gh-pages
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p class="copyright">Sheepshear maintained by <a href="https://github.com/kallisti5">kallisti5</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 
